Relazone finale parte mia

--- a/Relation/non compila latex/apa.tex
+++ b/Relation/non compila latex/apa.tex
@@ -1,9 +1,15 @@
 \documentclass[jou,apacite]{apa6}
-
+\usepackage{authblk}
 \title{Web Information Retrieval project}
 \shorttitle{APA style}
 
-\threeauthors{Valerio Colitta}{Angelo Catalani}{Alessandro Lo Presti}
+\author[1]{Angelo Catalani}
+\author[2]{Valerio Colitta}
+\author[3]{Alessandro Lo Presti}
+\affil[1]{La Sapienza University of Rome}
+\affil[2]{La Sapienza University of Rome}
+\affil[3]{La Sapienza University of Rome}
+
 
 \abstract{This projects is inspired by ~\cite{tsatsaronis2009generalized}. We introduce a new semantic similarity function and provide the code that implements the GVSM cosine similarity and all the APIs to test a generic semantic similarity function}
 
