--- a/Relation/Final proposal/main.tex
+++ b/Relation/Final proposal/main.tex
@@ -28,7 +28,7 @@
 Web Information Retrieval - Final Project
 }
 
-\author{Valerio Colitta$^{1}$, Angelo Catalani$^{2}$ and Alessandro Lo Presti$^{3}$}% <-this % stops a space
+\author{Angelo Catalani$^{1}$, Valerio Colitta$^{2}$ and Alessandro Lo Presti$^{3}$}% <-this % stops a space
 
 
 \begin{document}
