--- a/Relation/Final proposal/main.tex
+++ b/Relation/Final proposal/main.tex
@@ -14,7 +14,7 @@
 % See the \addtolength command later in the file to balance the column lengths
 % on the last page of the document
 
-
+\usepackage{graphicx}
 
 % The following packages can be found on http:\\www.ctan.org
 %\usepackage{graphics} % for pdf, bitmapped graphics files
@@ -28,7 +28,7 @@
 Web Information Retrieval - Final Project
 }
 
-\author{Valerio Colitta$^{1}$, Angelo Catalani$^{2}$ and Alessandro Lo Presti$^{3}$}% <-this % stops a space
+\author{Angelo Catalani, Valerio Colitta and Alessandro Lo Presti}% <-this % stops a space
 
 
 \begin{document}
@@ -65,7 +65,8 @@ The paper\cite{c1} taken into consideration, considered documents to be $n' = n\
     score(\vec{d},\vec{q}) = \frac{\mathop{\sum_{j=1}^{n'}\sum_{i=1}^{n'}}d_k[i][j]\cdot q[i][j] }{||\vec{d_k} ||\cdot||\vec{q} ||}
 \end{equation}
 \section{A new semantic similarity function}
-To tackle semantic similarity among terms, we relied on \texttt{WORDNET}.\\
+To tackle semantic similarity among terms, we relied on \textbf{WordNet®}\cite{c5}, a large lexical database of English. Nouns, verbs, adjectives and adverbs are grouped into sets of cognitive synonyms (synsets), each expressing a distinct concept. Synsets are interlinked by means of conceptual-semantic and lexical relations.
+.\\
 We decided to take into consideration only the \texttt{hypernym-relationships} to determine words similarity. The key point was to find the \texttt{Lowest Common Ancestor} (LCA) in the WORDNET hypernym tree. It specifies the lowest parent two senses have in common.\\
 Intuitively, the deeper the LCA, the stronger the similarity. This is true, but also the distance between the two terms is important.\\
 If two pairs of terms meet at the same LCA, it does not mean they are identical in the similarity. If they live on two separate branches, then they are not so similar, and this should be taken into account.\\
@@ -86,8 +87,7 @@ CSIM(t_1,t_2) = \max_{(s_i,s_j)} CSIM(s_i,s_j)
 \end{equation}
 This turns out to work well also to measure the non-similarity, in fact suppose that two terms have a small \texttt{PD} because they are close each other, but live near the root of the tree. In this case, \texttt{LCAD} will lower the similarity.\\
 \subsection{Complexity}
-This similarity measure performs better (wrt to complexity) than the one proposed by \cite{c1}, that implements a shortes path that has complexity $O((E+N)\log(N)$, while the one proposed in this project has to compute the lowest common ancestor that has complexity $O(N)$. The only bottleneck may be the log and sqrt operations, but their argument are bound to be at most $2N$.
-\clearpage
+This similarity measure performs better (wrt to complexity) than the one proposed by \cite{c1}, that implements a shortes path that has complexity $O((E+N)\log(N)$, while the one proposed in this project has to compute the lowest common ancestor that has complexity $O(N))$. The only bottleneck may be the log and sqrt operations, but their argument are bound to be at most $2N$.
 \section{The Dataset}
 \subsection{Document - Query dataset}
 We wanted to replicate the experiments made in the paper, but the \texttt{TREC} dataset was not available for free, so we selected the NPL dataset \cite{c2}.\\
@@ -108,14 +108,16 @@ Having limited computational resources, tests have been conducted after resizing
 Of course this was done only during the testing phase. The \texttt{tf-id} computation has been done on all the $11429$ documents.\\
 We wanted to make a comparison also against the traditional VSM, so for each document and query, we computed the cosine similarity.\\
 To compare both the methods we adopted the standard \texttt{precision-recall} plot.
-It is calculated as an average of the precision for a given recall level for the number  query considered .\\In particular 10 recall levels have been considered : $ 0.1, 0.2, ... , 1.0 $.\\%In addition to this, it has been executed a test also on the classical cosine similarity where it has been possible to consider the whole dataset since each computation has a linear complexity.%
+It is calculated as an average of the precision for a given recall level for the number  query considered .\\In particular 10 recall levels have been considered : $ 0.1, 0.2, ... , 1.0 $.\\ \\
+Another trick to speed up the computation was to approximate the score function, by considering the union of the terms of both the document and the query, instead of using the whole term vector in a double nested loop. That just wouldn't make the computation end.\\
+%By using the union of the terms, we have the same numerator of the original query, but a different, smaller denominator. 
+%In addition to this, it has been executed a test also on the classical cosine similarity where it has been possible to consider the whole dataset since each computation has a linear complexity.%
 \section{Performance}
 The performance will be divided into two categories, one for each kind of dataset.
 \subsection{Term-Term performance}
 This first part focuses on the capability of the semantic similarity measures to grasp the closeness of terms. We use the three datasets specified above and for each semantic similarity function taken into account, we compute the Spearman correlation coefficient.\\
 We use the similarity function specified by the paper (SR) \cite{c1}, our custom function (CSIM), the Wu-Palmer (WUP) \cite{c3} function, the Leacock-Chodorow Similarity (LCH) \cite{c4} and the Path similarity (PS).\\   \\
 Surprisingly, our custom similarity, overall, performs better (both in terms of time and score) than the \cite{c3} \cite{c4} and PS. However, it is below \cite{c1}. The lower complexity probably paid for the lower score.
-
 \begin{table}[h]
 \centering
 \begin{tabular}{l|l|l|l|l|l}
@@ -126,7 +128,12 @@ WS   & 0.33 & 0.29 & 0.29 & 0.61 & \textbf{0.34}
 \end{tabular}
 \end{table}
 \subsection{Document-Query Performance}
-As we earlier, we wanted to compare how well both the VSM and the GVSM performed. 
+As we earlier, we wanted to compare how well both the VSM and the GVSM performed.\\
+For the GVSM, because of too much computational need, we decided to interpolate the precision-recall plot only for a subset of queries.\\
+\multicolfloat{1}{2}{\centering
+                     \includegraphics[width=9cm]{Plot_overlap.png}
+                    }\\
+As expected the GVSM performs better than the standard one by at least $10\%$. It is an encouraging results, but it took us more than 2 hours just to rank 30 queries\dots We don't know what the results would be on a more powerful machine, with a more optimized code, but surely it will not beat the speed of a scalar product.
 \section{Conclusions}
 \subsection{Thoughts about the GVSM}
 As it can be seen from the previous sections, the concept of semantic similarity is surely a better choice over the simple cosine similarity. The real problem is the time-demanding operation for computing the $(t_i,t_j)$ score. We don't think this approach can be used efficiently at run-time. 
@@ -146,6 +153,7 @@ Another future goal is to extend the function also to adjectives, since most of 
 \bibitem{c4}Leacock, Claudia and Miller, George A and Chodorow, Martin
 \emph{Using corpus statistics and WordNet relations for sense identification}\\
 Computational Linguistics
+\bibitem{c5}WordNet, https://wordnet.princeton.edu/
 \end{thebibliography}
 
 
